--- a/templates/Default/category.html.twig
+++ b/templates/Default/category.html.twig
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{{ title }}</title>
+	<link rel="stylesheet" href="{{ asset('/templates/' ~ theme ~ '/assets/css/bootstrap.min.css') }}">
 	<link rel="stylesheet" href="{{ asset('/templates/' ~ theme ~ '/style.css') }}">
 </head>
-<body>
+<body ng-app="CMSApp">
 	<header>
 		<div class="container">
 			<div class="left-header pull-left">
@@ -20,5 +21,29 @@
 			<div class="clearfix"></div>
 		</div>
 	</header>
+	{% verbatim %}
+	<div class="container">
+		<div id="content" class="row" ng-controller="contentListController as contentList">
+			<div class="col-sm-12 col-md-4" ng-repeat="content in contentList.contents">
+				<div class="card">
+					<div class="image">
+						<img ng-src="/uploads/thumbs/{{content.thumbnail}}" />
+						<div class="header">
+							<h2 class="title">{{content.title}}</h2>
+							<div class="date">{{content.created | date : 'dd/MM/yyyy'}}</div>
+						</div>
+					</div>
+					<div class="content">
+						<div class="pull-left">
+							<img ng-src="/uploads/avatar/{{content.author.thumbnail}}" alt="{{content.author.user_nicename}}" title="{{content.author.user_nicename}}" class="avatar">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	{% endverbatim %}
+	<script src="{{ asset('/templates/' ~ theme ~ '/assets/js/angular.min.js') }}"></script>
+	<script src="{{ asset('/templates/' ~ theme ~ '/assets/js/app.js') }}"></script>
 </body>
 </html>
