--- a/templates/Default/style.css
+++ b/templates/Default/style.css
@@ -8,6 +8,9 @@
  * Version: 1.0
  * Tags: responsive-layout, fluid-layout, translation-ready, microformats, rtl-language-support
  */
+html {
+	font-size: 1vw;
+}
 
 html, body {
 	margin: 0;
@@ -18,12 +21,24 @@ body {
 	margin: 0;
 	padding: 0;
 	background: transparent url('assets/imgs/back-summer.jpg') center center fixed;
-	font: 90%/1.61803399 'Open Sans',Helvetica,Arial,sans-serif;
+	font: 1em 'Open Sans',Helvetica,Arial,sans-serif;
 	color: #333;
 }
 
 a {
 	text-decoration: none;
+}
+
+h1 {
+	font-size: 3em;
+}
+
+h2 {
+	font-size: 2em;
+}
+
+h3 {
+	font-size: 1em;
 }
 
 .btn {
@@ -73,6 +88,7 @@ header {
 	background: rgba(51,51,60,.88);
 	height: 60px;
 	max-height: 60px;
+	margin-bottom: 30px;
 }
 
 header .buttons {
@@ -93,3 +109,286 @@ header .buttons {
 	position: relative;
 }
 
+.card {
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(63, 63, 68, 0.1);
+  background-color: #FFFFFF;
+  margin-bottom: 30px;
+  font-size: 0.5em;
+}
+
+.card .image {
+  width: 100%;
+  overflow: hidden;
+  border-radius: 4px 4px 0 0;
+  position: relative;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+.card .image img {
+  width: 100%;
+}
+.card .filter {
+  position: absolute;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.68);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.card .filter .btn {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.card:hover .filter {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.card .btn-hover {
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.card:hover .btn-hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.card .map {
+  height: 280px;
+  border-radius: 4px;
+}
+.card .map.map-big {
+  height: 420px;
+}
+.card .content {
+  padding: 15px;
+}
+.card .content-no-padding {
+  padding: 0;
+}
+.card .content-no-padding .map {
+  margin-top: 15px;
+  border-radius: 0;
+}
+.card .content-full-width {
+  padding: 15px 0;
+}
+.card .header {
+  padding: 15px 15px 0px;
+  font-weight: 300;
+}
+
+.card .image .header {
+	position: absolute;
+	z-index: 2;
+	color: #fff;
+	bottom: 10px;
+}
+
+.card .header h4 {
+  font-size: 18px;
+}
+
+.card .header h4 a {
+  color: #fff;
+}
+
+.card .category,
+.card .form-group label {
+  font-size: 14px;
+  font-weight: 400;
+  color: #888888;
+  margin-bottom: 0px;
+}
+.card .category.error,
+.card .form-group label.error {
+  text-transform: none;
+  color: #FB404B;
+}
+.card .category i,
+.card .form-group label i {
+  font-size: 16px;
+}
+.card .form-group label {
+  font-size: 12px;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+}
+.card .title {
+  margin: 0;
+  color: #333333;
+  font-weight: 300;
+}
+
+.card .image .title {
+	color: #fff;
+}
+
+.card .avatar {
+  width: 30px;
+  height: 30px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+.card .description {
+  font-size: 14px;
+  color: #333;
+}
+.card .footer {
+  padding: 0 15px 10px;
+  background-color: transparent;
+  line-height: 30px;
+}
+.card .footer .form-group label {
+  margin-bottom: 0;
+}
+.card .footer .legend {
+  padding: 5px 0;
+}
+.card .footer hr {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.card .stats {
+  color: #a9a9a9;
+}
+.card .author {
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.card .author i {
+  font-size: 14px;
+}
+.card h6 {
+  font-size: 12px;
+  margin: 0;
+}
+.card.card-separator:after {
+  height: 100%;
+  right: -15px;
+  top: 0;
+  width: 1px;
+  background-color: #DDDDDD;
+  content: "";
+  position: absolute;
+}
+.card .ct-chart {
+  margin: 30px 0 30px;
+  height: 245px;
+}
+.card .table {
+  margin-bottom: 0;
+}
+.card .table tbody .bs-checkbox input,
+.card .table thead .bs-checkbox .th-inner {
+  padding-left: 15px;
+}
+.card .table tbody td:last-child,
+.card .table thead th:last-child {
+  padding-right: 15px;
+}
+.card .table tbody td.bs-checkbox:first-child {
+  padding-left: 23px !important;
+}
+.card .alert {
+  border-radius: 4px;
+  position: relative;
+}
+.card .alert.alert-with-icon {
+  padding-left: 65px;
+}
+.card.card-plain {
+  background-color: transparent !important;
+  box-shadow: none !important;
+  border-radius: 0 !important;
+}
+.card.card-plain .image {
+  border-radius: 4px;
+}
+
+.card-user .image {
+  height: 110px;
+}
+.card-user .image-plain {
+  height: 0;
+  margin-top: 110px;
+}
+.card-user .author {
+  text-align: center;
+  text-transform: none;
+  margin-top: -70px;
+}
+.card-user .avatar {
+  width: 124px;
+  height: 124px;
+  border: 5px solid #FFFFFF;
+  position: relative;
+  margin-bottom: 15px;
+}
+.card-user .avatar.border-gray {
+  border-color: #EEEEEE;
+}
+.card-user .title {
+  line-height: 24px;
+}
+.card-user .content {
+  min-height: 240px;
+}
+
+.card-user .footer,
+.card-price .footer {
+  padding: 5px 15px 10px;
+}
+.card-user hr,
+.card-price hr {
+  margin: 5px 15px;
+}
+
+.card-wizard {
+  border-radius: 10px;
+}
+.card-wizard .nav-pills {
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.card-wizard .nav-pills > li > a {
+  text-align: center;
+  border: none;
+  background-color: #9A9A9A;
+  color: #FFFFFF;
+  text-transform: uppercase;
+}
+.card-wizard .nav-pills > li > a:hover, .card-wizard .nav-pills > li > a:focus {
+  background-color: #9A9A9A;
+  outline: 0 !important;
+}
+.card-wizard .nav-pills > li:first-child > a, .card-wizard .nav-pills > li:last-child > a {
+  border-radius: 0;
+}
+.card-wizard .btn-finish {
+  display: none;
+}
+.card-wizard .header {
+  padding-top: 25px;
+  padding-bottom: 10px;
+}
+.card-wizard .footer {
+  padding-bottom: 15px;
+}
+
+.card.error {
+  color: #ff0000;
+  border:1px solid #ff0000;
+  padding: 10px;
+}
