--- a/src/CMS/Bundle/MediaBundle/Resources/views/Media/index.html.twig
+++ b/src/CMS/Bundle/MediaBundle/Resources/views/Media/index.html.twig
@@ -1,16 +1,101 @@
 {% extends "::admin/base_admin.html.twig" %}
 
 {% block body %}
-{{ form(form) }}
-<div class="row thumbs">
-	{% for medium in media %}
-		<div class="col-md-2 centered thumb">
-      <a href="javascript:" class="thumbnail text-center" data-toggle="modal" data-target="#modal-thumb" data-url="{{ asset(medium.webPath) }}" data-id="{{ medium.id }}" data-alt="{{ medium.metas['alt_1'] }}">
-        <img src="{{ asset(medium.webPath) }}" alt="{{ medium.metas['alt_1'] }}" title="{{ medium.metas['title_1'] }}">
-        <div class="caption">{{ file_details(medium.id)|raw }}</div>
-      </a>
-    </div>
-	{% endfor %}
-</div>
+    <h1 class="pull-left">Media</h1>
+    <div class="pull-right"><a href="javascript:resizeMedia()" class="btn">Resize</a></div>
+    <div class="clearfix"></div>
 
+
+    <div class="row resized">
+        <div class="col-md-6 hide">
+            <div class="card">
+                <div class="header">Resize Progression</div>
+                <div class="content">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="clearfix"></div>
+
+    {{ form(form) }}
+    <div class="row thumbs">
+        {% for medium in media %}
+            <div class="col-md-2 centered thumb">
+                <div class="thumbnail">
+                    <a href="javascript:" class="text-center" data-toggle="modal" data-target="#modal-thumb" data-url="{{ asset(medium.webPath) }}" data-id="{{ medium.id }}" data-alt="{{ medium.metas['alt_1'] }}">
+                        <img src="{{ asset(medium.webPathList) }}" alt="{{ medium.metas['alt_1'] }}" title="{{ medium.metas['title_1'] }}">
+                    </a>
+                    <div class="caption text-center">
+                        {{ file_details(medium.id)|raw }}
+                    </div>
+                    <a href="#modal-delete" data-toggle="modal" rel="tooltip" class="btn btn-simple btn-danger btn-xs pull-right" data-id="{{ medium.id }}" data-placement="top" data-original-title="Supprimer">
+                        <i class="fa fa-trash-o"></i>
+                    </a>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+    <div class="modal fade" id="modal-delete" aria-labelledby="simpleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">{{ 'cms.content.modal.title_delete'|trans }}</h4>
+                </div>
+                <div class="modal-body">
+                    {{ 'cms.content.modal.text_delete'|trans }}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn ink-reaction btn-raised btn-default-bright" data-dismiss="modal"><i class="fa fa-close"></i> {{ 'cancel'|trans }}</button>
+                    <a href="" class="btn ink-reaction btn-raised btn-danger"><i class="fa fa-trash-o"></i> {{ 'delete'|trans }}</a>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock body %}
+{% block javascript %}
+    <script type="text/javascript">
+        $('#modal-delete').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget);
+            var id = button.data('id');
+            var path = Routing.generate('{{ url }}', {id: id});
+            var modal = $(this);
+            modal.find('.modal-footer > a.btn-danger').attr('href', path);
+        });
+
+        function resizeMedia() {
+            $('.row.resized .col-md-6').hide().removeClass('hide').fadeIn();
+            var last_response_len = false;
+            $.ajax("{{ path('admin_media_resize') }}", {
+                xhrFields: {
+                    onprogress: function(e)
+                    {
+                        var this_response, response = e.currentTarget.response;
+                        if(last_response_len === false)
+                        {
+                            this_response = response;
+                            last_response_len = response.length;
+                        }
+                        else
+                        {
+                            this_response = response.substring(last_response_len);
+                            last_response_len = response.length;
+                        }
+                        var value = this_response;
+                        $('.row.resized .progress .progress-bar').attr('aria-valuenow', value).css('width', value+'%').html(value+'%');
+                    }
+                }
+            }).done(function() {
+                setTimeout(function(data) {
+                    $('.row.resized .col-md-6').fadeOut();
+                },5000)
+            })
+        }
+    </script>
+{% endblock javascript %}
