--- a/templates/Breezy/home.html.twig
+++ b/templates/Breezy/home.html.twig
@@ -38,6 +38,7 @@
             <div id="content">
                 <div class="post-list grid">
                     <div class="grid-layout">
+                        {% set contents = Query({'category_name': '-non-categorise', 'orderby': 'id', 'order': 'DESC'}) %}
                         {% for content in contents %}
                             <article class="post-item article-item">
                                 <div id="post" class="post item">
