--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -12,43 +12,19 @@
 <a href="#" class="goto-top"><i class="fa fa-angle-up"></i></a>
 </div>
 
-<div class="flex-container hide">
-    <div class="unit">
-        <div class="heart">
-            <div class="heart-piece-0"></div>
-            <div class="heart-piece-1"></div>
-            <div class="heart-piece-2"></div>
-            <div class="heart-piece-3"></div>
-            <div class="heart-piece-4"></div>
-            <div class="heart-piece-5"></div>
-            <div class="heart-piece-6"></div>
-            <div class="heart-piece-7"></div>
-            <div class="heart-piece-8"></div>
-        </div>
-        <p>Choup et Doune</p>
-    </div>
-</div>
-
-<script type="text/javascript" src="{{ asset('/bundles/fosjsrouting/js/router.js') }}"></script>
-<script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}" defer></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 {% javascripts
 '@breezy_js'
     output="js/breezy.js"
  %}
 <script type="text/javascript" src="{{ asset_url }}"></script>
 {% endjavascripts %}
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
+<script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}" defer></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.min.js"></script>
 <script type="text/javascript">
     if ('serviceWorker' in navigator) {
-        console.log('CLIENT: service worker registration in progress.');
         navigator.serviceWorker.register('{{ absolute_url('/templates/Breezy/assets/js/service-worker.js') }}').then(function() {
-            console.log('CLIENT: service worker registration complete.');
-        }, function() {
-            console.log('CLIENT: service worker registration failure.');
         });
-    } else {
-        console.log('CLIENT: service worker is not supported.');
     }
 
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
